--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
-services:
+services: 
   bento:
     build: .
-    ports:
-      - 80:80
     volumes:
+      # Append Bento config location to below line.
       - ./config.js:/usr/share/nginx/html/config.js
+    ports:
+      # Replace host port 80 (left side) with desired port.
+      - 80:80
