--- a/package.json
+++ b/package.json
@@ -3,19 +3,5 @@
   "version": "1.2.5",
   "description": "🍱 Minimalist, elegant and hackable startpage inspired by the Bento box!",
   "author": "Miguel Ávila",
-  "license": "ISC",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack --config webpack.config.js"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "terser-webpack-plugin": "^5.0.0",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^5.0.0",
-    "css-minimizer-webpack-plugin": "^5.0.0",
-    "style-loader": "^3.0.0",
-    "css-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^2.7.5"
-  }
+  "license": "ISC"
 }
